--- a/spring-boot-thymeleaf/src/main/resources/templates/hello.html
+++ b/spring-boot-thymeleaf/src/main/resources/templates/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh-cmn-Hans" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title>Title</title>
